--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- https://thg-paulo-santos.github.io/teepee-svg-animations/ -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -41,7 +42,7 @@
 
 </body>
 
-<styles>
+<style>
 .banner {
   position: relative;
   width: 100%;
