--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ svg {
   75% { transform: translateY(-50%) scale(1.2) rotate(-270deg); opacity: 0.75; }
   100% { transform: translateY(0) scale(1) rotate(-360deg); opacity: 1; }
 }
-</styles>
+</style>
 
 <script>
 function setAnimation(variant) {
